# cpustatgraph

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README.md
src/: cpustats.cpp  cpustats.h  main.cpp  ringbuffer.h  window.cpp  window.h
